@@ -16,6 +16,7 @@ VERSION 1.1.5 (??? ?? ??:?? 2004)
 - rsync exit codes 23 and 24 make rsnapshot return a warning exit code
 - Changed link_dest comment in config file to mention "cross-platform"
 - Added utils/debug_moving_files.sh abuse script for testing
+- Added 'du' option to show disk usage in snapshot_root
 
 VERSION 1.1.4 (May 16 23:44 2004)
 ------------------------------------------------------------------------------
